# turso-compile-fail

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
